# hdiag

./: .gitignore  Cargo.toml  Justfile  Untitled-2023-12-20-1515.excalidraw  build.rs  input.excalidraw  package-lock.json  package.json  rust-toolchain.toml  text_in_all_fonts.excalidraw
examples/: a_thing.excalidraw
excalidraw-app/: index.html  package.json  pnpm-lock.yaml  vite.config.js
excalidraw-app/public/: .gitignore
excalidraw-app/src/: index.jsx
node/: package-lock.json  package.json
node/src/: index.js
src/: cli.rs  excalidraw.rs  main.rs  serve_zip.rs
