[package]
name = "hdiag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
zip = "0.6.6"

[build-dependencies]
ignore = "0.4.22"
zip = "0.6.6"
walkdir = "2.4.0"
