[package]
name = "hdiag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
headless_chrome = "1.0.9"
mime = "0.3.17"
mime_guess = "2.0.4"
quick-xml = "0.31.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
zip = "0.6.6"

[build-dependencies]
ignore = "0.4.22"
zip = "0.6.6"
walkdir = "2.4.0"
